Added Semi-Supervised Learning

--- a/Anomaly Detection in Network Traffic.ipynb
+++ b/Anomaly Detection in Network Traffic.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "8d971e6a-692c-4578-b13c-0ab55b079a76",
    "metadata": {
     "id": "8d971e6a-692c-4578-b13c-0ab55b079a76"
@@ -1146,14 +1146,8 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "dataframe",
-       "variable_name": "test_data"
-      },
       "text/html": [
-       "\n",
-       "  <div id=\"df-5d77d2e0-b54a-4dc4-aebc-a752f40252f1\" class=\"colab-df-container\">\n",
-       "    <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -1462,271 +1456,7 @@
        "  </tbody>\n",
        "</table>\n",
        "<p>175341 rows × 32 columns</p>\n",
-       "</div>\n",
-       "    <div class=\"colab-df-buttons\">\n",
-       "\n",
-       "  <div class=\"colab-df-container\">\n",
-       "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d77d2e0-b54a-4dc4-aebc-a752f40252f1')\"\n",
-       "            title=\"Convert this dataframe to an interactive table.\"\n",
-       "            style=\"display:none;\">\n",
-       "\n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-       "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-       "  </svg>\n",
-       "    </button>\n",
-       "\n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-buttons div {\n",
-       "      margin-bottom: 4px;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "    <script>\n",
-       "      const buttonEl =\n",
-       "        document.querySelector('#df-5d77d2e0-b54a-4dc4-aebc-a752f40252f1 button.colab-df-convert');\n",
-       "      buttonEl.style.display =\n",
-       "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "      async function convertToInteractive(key) {\n",
-       "        const element = document.querySelector('#df-5d77d2e0-b54a-4dc4-aebc-a752f40252f1');\n",
-       "        const dataTable =\n",
-       "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                    [key], {});\n",
-       "        if (!dataTable) return;\n",
-       "\n",
-       "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "          + ' to learn more about interactive tables.';\n",
-       "        element.innerHTML = '';\n",
-       "        dataTable['output_type'] = 'display_data';\n",
-       "        await google.colab.output.renderOutput(dataTable, element);\n",
-       "        const docLink = document.createElement('div');\n",
-       "        docLink.innerHTML = docLinkHtml;\n",
-       "        element.appendChild(docLink);\n",
-       "      }\n",
-       "    </script>\n",
-       "  </div>\n",
-       "\n",
-       "\n",
-       "<div id=\"df-b5c3188b-9228-44e1-b7b1-2211493bafd9\">\n",
-       "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b5c3188b-9228-44e1-b7b1-2211493bafd9')\"\n",
-       "            title=\"Suggest charts\"\n",
-       "            style=\"display:none;\">\n",
-       "\n",
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "     width=\"24px\">\n",
-       "    <g>\n",
-       "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-       "    </g>\n",
-       "</svg>\n",
-       "  </button>\n",
-       "\n",
-       "<style>\n",
-       "  .colab-df-quickchart {\n",
-       "      --bg-color: #E8F0FE;\n",
-       "      --fill-color: #1967D2;\n",
-       "      --hover-bg-color: #E2EBFA;\n",
-       "      --hover-fill-color: #174EA6;\n",
-       "      --disabled-fill-color: #AAA;\n",
-       "      --disabled-bg-color: #DDD;\n",
-       "  }\n",
-       "\n",
-       "  [theme=dark] .colab-df-quickchart {\n",
-       "      --bg-color: #3B4455;\n",
-       "      --fill-color: #D2E3FC;\n",
-       "      --hover-bg-color: #434B5C;\n",
-       "      --hover-fill-color: #FFFFFF;\n",
-       "      --disabled-bg-color: #3B4455;\n",
-       "      --disabled-fill-color: #666;\n",
-       "  }\n",
-       "\n",
-       "  .colab-df-quickchart {\n",
-       "    background-color: var(--bg-color);\n",
-       "    border: none;\n",
-       "    border-radius: 50%;\n",
-       "    cursor: pointer;\n",
-       "    display: none;\n",
-       "    fill: var(--fill-color);\n",
-       "    height: 32px;\n",
-       "    padding: 0;\n",
-       "    width: 32px;\n",
-       "  }\n",
-       "\n",
-       "  .colab-df-quickchart:hover {\n",
-       "    background-color: var(--hover-bg-color);\n",
-       "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "    fill: var(--button-hover-fill-color);\n",
-       "  }\n",
-       "\n",
-       "  .colab-df-quickchart-complete:disabled,\n",
-       "  .colab-df-quickchart-complete:disabled:hover {\n",
-       "    background-color: var(--disabled-bg-color);\n",
-       "    fill: var(--disabled-fill-color);\n",
-       "    box-shadow: none;\n",
-       "  }\n",
-       "\n",
-       "  .colab-df-spinner {\n",
-       "    border: 2px solid var(--fill-color);\n",
-       "    border-color: transparent;\n",
-       "    border-bottom-color: var(--fill-color);\n",
-       "    animation:\n",
-       "      spin 1s steps(1) infinite;\n",
-       "  }\n",
-       "\n",
-       "  @keyframes spin {\n",
-       "    0% {\n",
-       "      border-color: transparent;\n",
-       "      border-bottom-color: var(--fill-color);\n",
-       "      border-left-color: var(--fill-color);\n",
-       "    }\n",
-       "    20% {\n",
-       "      border-color: transparent;\n",
-       "      border-left-color: var(--fill-color);\n",
-       "      border-top-color: var(--fill-color);\n",
-       "    }\n",
-       "    30% {\n",
-       "      border-color: transparent;\n",
-       "      border-left-color: var(--fill-color);\n",
-       "      border-top-color: var(--fill-color);\n",
-       "      border-right-color: var(--fill-color);\n",
-       "    }\n",
-       "    40% {\n",
-       "      border-color: transparent;\n",
-       "      border-right-color: var(--fill-color);\n",
-       "      border-top-color: var(--fill-color);\n",
-       "    }\n",
-       "    60% {\n",
-       "      border-color: transparent;\n",
-       "      border-right-color: var(--fill-color);\n",
-       "    }\n",
-       "    80% {\n",
-       "      border-color: transparent;\n",
-       "      border-right-color: var(--fill-color);\n",
-       "      border-bottom-color: var(--fill-color);\n",
-       "    }\n",
-       "    90% {\n",
-       "      border-color: transparent;\n",
-       "      border-bottom-color: var(--fill-color);\n",
-       "    }\n",
-       "  }\n",
-       "</style>\n",
-       "\n",
-       "  <script>\n",
-       "    async function quickchart(key) {\n",
-       "      const quickchartButtonEl =\n",
-       "        document.querySelector('#' + key + ' button');\n",
-       "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-       "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
-       "      try {\n",
-       "        const charts = await google.colab.kernel.invokeFunction(\n",
-       "            'suggestCharts', [key], {});\n",
-       "      } catch (error) {\n",
-       "        console.error('Error during call to suggestCharts:', error);\n",
-       "      }\n",
-       "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-       "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-       "    }\n",
-       "    (() => {\n",
-       "      let quickchartButtonEl =\n",
-       "        document.querySelector('#df-b5c3188b-9228-44e1-b7b1-2211493bafd9 button');\n",
-       "      quickchartButtonEl.style.display =\n",
-       "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "    })();\n",
-       "  </script>\n",
-       "</div>\n",
-       "\n",
-       "  <div id=\"id_04a1a25a-3b53-4cdf-a771-749aa41b1452\">\n",
-       "    <style>\n",
-       "      .colab-df-generate {\n",
-       "        background-color: #E8F0FE;\n",
-       "        border: none;\n",
-       "        border-radius: 50%;\n",
-       "        cursor: pointer;\n",
-       "        display: none;\n",
-       "        fill: #1967D2;\n",
-       "        height: 32px;\n",
-       "        padding: 0 0 0 0;\n",
-       "        width: 32px;\n",
-       "      }\n",
-       "\n",
-       "      .colab-df-generate:hover {\n",
-       "        background-color: #E2EBFA;\n",
-       "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "        fill: #174EA6;\n",
-       "      }\n",
-       "\n",
-       "      [theme=dark] .colab-df-generate {\n",
-       "        background-color: #3B4455;\n",
-       "        fill: #D2E3FC;\n",
-       "      }\n",
-       "\n",
-       "      [theme=dark] .colab-df-generate:hover {\n",
-       "        background-color: #434B5C;\n",
-       "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "        fill: #FFFFFF;\n",
-       "      }\n",
-       "    </style>\n",
-       "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('test_data')\"\n",
-       "            title=\"Generate code using this dataframe.\"\n",
-       "            style=\"display:none;\">\n",
-       "\n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
-       "  </svg>\n",
-       "    </button>\n",
-       "    <script>\n",
-       "      (() => {\n",
-       "      const buttonEl =\n",
-       "        document.querySelector('#id_04a1a25a-3b53-4cdf-a771-749aa41b1452 button.colab-df-generate');\n",
-       "      buttonEl.style.display =\n",
-       "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "      buttonEl.onclick = () => {\n",
-       "        google.colab.notebook.generateWithVariable('test_data');\n",
-       "      }\n",
-       "      })();\n",
-       "    </script>\n",
-       "  </div>\n",
-       "\n",
-       "    </div>\n",
-       "  </div>\n"
+       "</div>"
       ],
       "text/plain": [
        "             dur  spkts  dpkts  sbytes  dbytes           rate         sload  \\\n",
@@ -1795,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4feb8ba0-c9a8-4b02-86e1-66c9265f6238",
    "metadata": {
     "id": "4feb8ba0-c9a8-4b02-86e1-66c9265f6238"
@@ -1811,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a70faf64-311a-43f6-974e-dde60e80cfc7",
    "metadata": {
     "id": "a70faf64-311a-43f6-974e-dde60e80cfc7"
@@ -8301,9 +8031,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "275c863a-0797-468b-9c28-288f02202582",
+   "metadata": {},
+   "source": [
+    "# Semi-Supervised Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d8480e89-9513-4160-83a9-834c142bdf01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_ITERATIONS = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "861cf940-e991-411e-9828-dbf315a35e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model (using Isolation Forest)\n",
+    "model = IsolationForest(contamination=0.1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fee04675-aed0-4bf8-87cf-7f2641be39c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterative training\n",
+    "for _ in range(NUM_ITERATIONS):  # Number of iterations\n",
+    "    model.fit(X_train_scaled)\n",
+    "    y_pred = model.predict(X_train_scaled)\n",
+    "    high_confidence = np.where(y_pred == 1, True, False)\n",
+    "    \n",
+    "    # Add high-confidence predictions to the training set\n",
+    "    X_train_scaled = np.concatenate([X_train_scaled, X_train_scaled[high_confidence]], axis=0)\n",
+    "    y_train = np.concatenate([y_train, y_pred[high_confidence]], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d227495b-4b86-4860-9dc2-439962415906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final prediction on test set\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "y_pred = np.where(y_pred == 1, 0, 1)  # Convert to 0 (normal) and 1 (anomaly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9b85385e-05f3-49c0-97e5-698b3f68b115",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Semi-Supervised Learning\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.25      0.58      0.35     56000\n",
+      "           1       0.49      0.19      0.27    119341\n",
+      "\n",
+      "    accuracy                           0.32    175341\n",
+      "   macro avg       0.37      0.39      0.31    175341\n",
+      "weighted avg       0.42      0.32      0.30    175341\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate\n",
+    "print(\"Semi-Supervised Learning\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf931ecc-7f4a-49d4-a2c5-21eb6c15d509",
+   "id": "6623653a-385f-4a97-83fd-a0e3a3effe79",
    "metadata": {},
    "outputs": [],
    "source": []
